log to stdout (or docker)

--- a/container/image/opt/mumble-server.ini
+++ b/container/image/opt/mumble-server.ini
@@ -1,7 +1,7 @@
 uname=mumble-server
 
 database=/data/mumble-server.sqlite
-logfile=/var/log/mumble-server/mumble-server.log
+logfile=
 pidfile=/var/run/mumble-server/mumble-server.pid
 
 sslCert=/data/cert.pem
