--- a/image/murmur-config.ini
+++ b/image/murmur-config.ini
@@ -1,11 +1,11 @@
-uname=mumble-server
+uname=murmur
 
-database=/data/mumble-server.sqlite
+database=/data/murmur/database.sqlite
 logfile=
-pidfile=/var/run/mumble-server/mumble-server.pid
+pidfile=/var/run/murmur/murmur.pid
 
-sslCert=/data/cert.pem
-sslKey=/data/key.pem
+sslCert=/data/murmur/cert.pem
+sslKey=/data/murmur/key.pem
 
 port=64738
 bandwidth=72000
