use relative paths in murmur-config

--- a/image/murmur-config.ini
+++ b/image/murmur-config.ini
@@ -1,11 +1,11 @@
 uname=murmur
 
-database=/data/murmur/database.sqlite
+database=database.sqlite
 logfile=
 pidfile=/var/run/murmur/murmur.pid
 
-sslCert=/data/murmur/cert.pem
-sslKey=/data/murmur/key.pem
+sslCert=cert.pem
+sslKey=key.pem
 
 port=64738
 bandwidth=72000
